# codereport

./: .gitignore  LICENSE  pyproject.toml  setup.py
codereport/: __init__.py  cli.py  codereport.py  filetree.py  html.py  reportitem.py  requirements.txt  templates.py  util.py
codereport/templates/: base.html  file.html  index.html  main.html  style.css  summary.html
src/codereport/: cli.py  codereport.py  filetree.py  html.py  templates.py  util.py
src/codereport/templates/: base.html  code_summary.html  line.html  main.html  style.css  summary.html
tests/: test_codereport.py  test_filetree.py  test_htmlformatter.py
