[tool.poetry]
name = "codereport"
version = "0.2.5"
description = "Make annotated code reports"
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [{ include = "codereport", from = "src" }]

[tool.poetry.scripts]
codereport = 'codereport.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.1"
python-slugify = "^6.1.1"
Pygments = "^2.11.2"
fs = "^2.4.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mock = "^4.0.3"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
